--- a/style.css
+++ b/style.css
@@ -47,12 +47,19 @@
   margin-top: 0px;
   padding: 0.5rem;
 }
+/* Marquee header area start */
 .marquee-wrapper {
   margin-top: 2rem;
   margin-bottom: 2rem;
+  overflow: hidden; /* Ensure no text overflows the container */
+  position: relative; /* Needed for absolute positioning of the marquee */
 }
 .marquee-text {
   text-decoration: none;
+  white-space: nowrap; /* Prevent text wrapping */
+  display: inline-block; /* For smooth animation */
+  position: absolute; /* Allows text to move across the wrapper */
+  animation: marquee 5s linear infinite; /* Animation for scrolling */
 }
 
 .marquee-text--background {
@@ -61,10 +68,22 @@
     rgba(255, 255, 255, 1) 0%,
     rgba(208, 255, 201, 1) 100%
   );
-  padding: 0.3em;
+  padding: 1rem;
+  width: 100%;
   border-radius: 30px;
+  border-radius: 30px;
+  /* display: inline-block; Ensures the background stays with the text */
 }
-/* Main area */
+@keyframes marquee {
+  0% {
+    transform: translateX(100%); /* Start off-screen on the right */
+  }
+  100% {
+    transform: translateX(-100%); /* End off-screen on the left */
+  }
+}
+/* Marquee header area stop------------------------------------------------------------------*/
+/* Main area------------------------------------------------------------------ */
 /* Navigation start */
 /* Ornate Div Scroll from pastelhello.com */
 .innerornate::-webkit-scrollbar-track {
@@ -94,8 +113,11 @@
 .ornatediv {
   width: 244px;
   height: 265px;
+  border: dashed #ffd2d8;
+  border-radius: 10px;
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
 }
+/* Ornate Div Scroll from pastelhello.com stop ------------------------------------------------------------------ */
