--- a/style.css
+++ b/style.css
@@ -51,14 +51,13 @@
 .marquee-wrapper {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  overflow: hidden; /* Ensure no text overflows the container */
-  position: relative; /* Needed for absolute positioning of the marquee */
+  position: relative;
 }
 .marquee-text {
   text-decoration: none;
-  white-space: nowrap; /* Prevent text wrapping */
-  display: inline-block; /* For smooth animation */
-  position: absolute; /* Allows text to move across the wrapper */
+  white-space: nowrap;
+  display: inline-block;
+  position: absolute;
   animation: marquee 5s linear infinite; /* Animation for scrolling */
 }
 
@@ -72,7 +71,6 @@
   width: 100%;
   border-radius: 30px;
   border-radius: 30px;
-  /* display: inline-block; Ensures the background stays with the text */
 }
 @keyframes marquee {
   0% {
@@ -121,3 +119,27 @@
   background-repeat: no-repeat;
 }
 /* Ornate Div Scroll from pastelhello.com stop ------------------------------------------------------------------ */
+/* Main grid */
+.index-main {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto auto;
+  gap: 10px;
+  width: 100%;
+  height: 100vh;
+}
+.index-main__second-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  grid-column: span 2;
+  width: 100%;
+}
+/* Main grid stop */
+/* Introduction */
+.introduction {
+  border: dashed #ffd2d8;
+  padding: 5rem;
+  border-radius: 50px;
+  text-align: center;
+}
